<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="24dp">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tune_frequency_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/settings_frequency_hint"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/tune_frequency_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusedByDefault="true"
            android:inputType="number"
            android:maxLength="3" />

    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune_scan_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="16dp"
        android:text="@string/tun_dialog_scan_btn"
        app:layout_constraintRight_toLeftOf="@+id/tune_action_btn"
        app:layout_constraintTop_toBottomOf="@+id/tune_frequency_field" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/tune_action_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dialog_tune_btn_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tune_frequency_field" />

</androidx.constraintlayout.widget.ConstraintLayout>