<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:focusedByDefault="true"
    android:background="@android:color/black">

    <com.nextgenbroadcast.mobile.tvandroid.view.ReceiverMotionLayout
        android:id="@+id/motion_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_main_scene">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/rmp_player_container"
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.nextgenbroadcast.mobile.tvandroid.view.ReceiverMediaPlayer
                android:id="@+id/receiver_media_player"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:resize_mode="fit"
                app:use_controller="false" />

            <FrameLayout
                android:id="@+id/media_controls_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/semiTransparent"
                android:visibility="invisible"
                app:layout_constraintBottom_toBottomOf="@+id/receiver_media_player"
                app:layout_constraintEnd_toEndOf="@+id/receiver_media_player"
                app:layout_constraintStart_toStartOf="@+id/receiver_media_player"
                app:layout_constraintTop_toTopOf="@+id/receiver_media_player"
                tools:visibility="visible">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/setting_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="16dp"
                    android:padding="8dp"
                    android:src="@drawable/ic_baseline_settings_24" />

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/player_play_pause_btn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:src="@drawable/ic_exo_icon_pause" />
            </FrameLayout>

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/antenna_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_baseline_settings_input_antenna_24"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:visibility="invisible"
                android:layout_margin="24dp" />

            <androidx.constraintlayout.widget.Group
                android:id="@+id/loading_progress"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:constraint_referenced_ids="loading_progress_title,loading_progress_indicator" />

            <TextView
                android:id="@+id/loading_progress_title"
                style="@style/LoadingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:gravity="center_horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/receiver_media_player"
                app:layout_constraintEnd_toEndOf="@+id/receiver_media_player"
                app:layout_constraintStart_toStartOf="@+id/receiver_media_player"
                app:layout_constraintTop_toTopOf="@+id/receiver_media_player" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/cancel_scan_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:paddingLeft="16dp"
                android:paddingTop="8dp"
                android:paddingRight="16dp"
                android:paddingBottom="8dp"
                android:text="@string/receiver_scanning_cancel_btn"
                android:textAllCaps="false"
                android:visibility="invisible"
                tools:visibility="visible"
                app:layout_constraintEnd_toEndOf="@id/loading_progress_title"
                app:layout_constraintStart_toStartOf="@+id/loading_progress_title"
                app:layout_constraintTop_toBottomOf="@id/loading_progress_title" />

            <TextView
                android:id="@+id/loading_progress_indicator"
                style="@style/LoadingIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="@id/loading_progress_title"
                app:layout_constraintStart_toEndOf="@+id/loading_progress_title" />

            <com.nextgenbroadcast.mobile.view.UserAgentView
                android:id="@+id/ba_view"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/side_menu_container_line_45"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/scale_factor_for_mid_position_of_esg" />

        <View
            android:id="@+id/side_menu_indicator"
            android:layout_width="20dp"
            android:layout_height="0dp"
            android:alpha="0"
            android:background="@drawable/service_guide_indicator_bg"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/channel_header"
            style="@style/ESGHeader"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:paddingHorizontal="16dp"
            android:paddingVertical="8dp"
            app:layout_constraintEnd_toEndOf="@+id/service_guide_view"
            app:layout_constraintHeight_percent="0.3"
            app:layout_constraintStart_toStartOf="@+id/service_guide_view"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/service_name_view"
                style="@style/ESGHeader.Title"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/services_guide_header_item_padding"
                app:layout_constraintEnd_toStartOf="@+id/program_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="Hazel" />

            <TextView
                android:id="@+id/service_description_view"
                style="@style/ESGHeader.Desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/services_guide_header_item_padding"
                android:layout_marginEnd="@dimen/services_guide_header_item_padding"
                android:lines="1"
                app:layout_constraintEnd_toStartOf="@+id/program_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service_name_view"
                tools:text="DTV | 22-3 | Ant TV | 7:00 AM - 7:30 AM |" />

            <TextView
                android:id="@+id/service_info_view"
                style="@style/ESGHeader.Desc"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/services_guide_header_item_padding"
                android:layout_marginEnd="@dimen/services_guide_header_item_padding"
                android:ellipsize="end"
                android:maxLines="2"
                app:layout_constraintEnd_toStartOf="@+id/program_thumbnail"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/service_description_view"
                tools:text="No Information" />

            <com.nextgenbroadcast.mobile.tvandroid.view.WebImageView
                android:id="@+id/program_thumbnail"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintDimensionRatio="2:3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/side_menu_container_line_30"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="@dimen/scale_factor_for_end_position_of_esg" />

        <com.nextgenbroadcast.mobile.tvandroid.servicesGuide.ServiceGuideView
            android:id="@+id/service_guide_view"
            android:layout_width="@dimen/width_hidden_esg_menu"
            android:layout_height="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/rmp_player_container"
            app:layout_constraintTop_toBottomOf="@+id/channel_header">

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/service_guide_grid"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:background="@color/gridBgColor"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <FrameLayout
                android:id="@+id/time_container"
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintBottom_toBottomOf="@+id/service_guide_grid"
                app:layout_constraintEnd_toEndOf="@+id/service_guide_grid"
                app:layout_constraintStart_toStartOf="@+id/service_guide_grid"
                app:layout_constraintTop_toTopOf="@+id/service_guide_grid" />

            <FrameLayout
                android:id="@+id/channels_container"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:background="@color/gridBgColor"
                app:layout_constraintBottom_toBottomOf="@+id/service_guide_grid"
                app:layout_constraintStart_toStartOf="@+id/service_guide_grid"
                app:layout_constraintTop_toTopOf="@+id/service_guide_grid" />

            <FrameLayout
                android:id="@+id/service_filter_container"
                android:layout_width="match_parent"
                android:layout_height="@dimen/services_guide_cell_height"
                android:clipToPadding="true"
                android:paddingBottom="@dimen/services_guide_divider_size"
                app:layout_constraintTop_toTopOf="@+id/time_container">

                <include
                    android:id="@+id/service_filter_view"
                    layout="@layout/service_guide_filter_layout" />
            </FrameLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/esg_placeholder"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/headerBg">

                <androidx.constraintlayout.widget.Guideline
                    android:id="@+id/guide_line"
                    android:layout_width="0dp"
                    android:layout_height="0dp"
                    android:orientation="horizontal" />

                <TextView
                    style="@style/LoadingIndicator"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/service_guide_loading_message"
                    app:layout_constraintBottom_toBottomOf="@+id/guide_line"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/guide_line" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.nextgenbroadcast.mobile.tvandroid.servicesGuide.ServiceGuideView>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/collapsed_bottom_container_line"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_end="@dimen/dev_service_selection_peek_height" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/bottom_container"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@+id/collapsed_bottom_container_line">

            <TextView
                android:id="@+id/sources_sheet_peeker_text"
                android:layout_width="match_parent"
                android:layout_height="16dp"
                android:background="@color/peekerColor"
                android:gravity="center_horizontal"
                android:text="@string/dev_select_source"
                android:textColor="@color/textColor"
                android:textSize="10sp"
                app:layout_constraintTop_toTopOf="parent"
                tools:ignore="SmallSp" />

            <ListView
                android:id="@+id/sources_list"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="#676767"
                app:layout_constraintTop_toBottomOf="@+id/sources_sheet_peeker_text" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.nextgenbroadcast.mobile.tvandroid.view.ReceiverMotionLayout>

</FrameLayout>